welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: value lenght is not a member of Array[Int]
  var T = nums.lenght
               ^